--- a/.github/workflows/run-e2e-tests.yml
+++ b/.github/workflows/run-e2e-tests.yml
@@ -17,15 +17,15 @@ jobs:
           POSTGRESQL_PASSWORD: docker
           POSTGRESQL_DATABASE: apisolid
 
-    steps: 
+    steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
-        with: 
+        with:
           node_version: 20
           cache: 'npm'
-      
+
       - run: npm ci
       - run: npm run test:e2e
-        env: 
+        env:
           JWT_SECRET: testing
-          DATABASE_URL: "postgresql://docker:docker@localhost:5432/apisolid?schema=public"
+          DATABASE_URL: 'postgresql://docker:docker@localhost:5432/apisolid?schema=public'
