--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
     "test:watch": "vitest --dir src/services",
     "test:create-prisma-environment": "npm link ./prisma/vitest-environment-prisma",
     "test:install-prisma-environment": "npm link vitest-environment-prisma",
-    "pretest:e2e": "run-s test:create-prisma-environment test:install-prisma-environment",
+    "pretest:e2e": "sudo run-s test:create-prisma-environment test:install-prisma-environment",
     "test:e2e": "vitest run --dir src/http",
     "test:e2e:fast": "vitest run --dir src/http",
     "test:coverage": "vitest run --coverage",
     "lint:prettier:check": "prettier --check .",
     "lint:prettier:fix": "prettier --write .",
+    "lint:eslint:check": "eslint .",
     "services:up": "docker compose -f src/infra/docker-compose.yaml up -d",
     "services:stop": "docker compose -f src/infra/docker-compose.yaml stop",
     "services:down": "docker compose -f src/infra/docker-compose.yaml down"
@@ -32,14 +33,17 @@
     "@types/jsonwebtoken": "9.0.6",
     "@types/node": "20.14.12",
     "@types/supertest": "6.0.2",
+    "@typescript-eslint/eslint-plugin": "7.18.0",
     "@vitest/coverage-v8": "2.0.4",
     "eslint": "8.57.0",
+    "eslint-config-prettier": "9.1.0",
+    "eslint-plugin-import": "2.29.1",
     "npm-run-all": "4.1.5",
+    "prettier": "3.3.3",
     "prisma": "5.17.0",
     "supertest": "7.0.0",
     "tsup": "8.2.3",
     "tsx": "4.16.2",
-    "typescript": "5.5.4",
     "vite-tsconfig-paths": "4.3.2",
     "vitest": "2.0.4"
   },
