--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test:watch": "vitest --dir src/services",
     "test:create-prisma-environment": "npm link ./prisma/vitest-environment-prisma",
     "test:install-prisma-environment": "npm link vitest-environment-prisma",
-    "pretest:e2e": "sudo run-s test:create-prisma-environment test:install-prisma-environment",
+    "pretest:e2e": "run-s test:create-prisma-environment test:install-prisma-environment",
     "test:e2e": "vitest run --dir src/http",
     "test:e2e:fast": "vitest run --dir src/http",
     "test:coverage": "vitest run --coverage",
