--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
     "lint:prettier:check": "prettier --check .",
     "lint:prettier:fix": "prettier --write .",
     "lint:eslint:check": "eslint .",
-    "services:up": "docker compose -f src/infra/docker-compose.yaml up -d",
-    "services:stop": "docker compose -f src/infra/docker-compose.yaml stop",
-    "services:down": "docker compose -f src/infra/docker-compose.yaml down"
+    "services:up": "docker compose -f ./docker-compose.yaml up -d",
+    "services:stop": "docker compose -f ./docker-compose.yaml stop",
+    "services:down": "docker compose -f ./docker-compose.yaml down"
   },
   "keywords": [],
   "author": "",
