--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test:watch": "vitest --dir src/services",
     "test:create-prisma-environment": "npm link ./prisma/vitest-environment-prisma",
     "test:install-prisma-environment": "npm link vitest-environment-prisma",
-    "pretest:e2e": "run-s test:create-prisma-environment test:install-prisma-environment",
+    "pretest:e2e": "sudo run-s test:create-prisma-environment test:install-prisma-environment",
     "test:e2e": "vitest run --dir src/http",
     "test:e2e:fast": "vitest run --dir src/http",
     "test:coverage": "vitest run --coverage",
@@ -29,6 +29,7 @@
     "@rocketseat/eslint-config": "2.2.2",
     "@types/bcryptjs": "2.4.6",
     "@types/cookie-parser": "1.4.7",
+    "@types/cors": "2.8.17",
     "@types/express": "4.17.21",
     "@types/jsonwebtoken": "9.0.6",
     "@types/node": "20.14.13",
@@ -51,6 +52,7 @@
     "@prisma/client": "5.17.0",
     "bcryptjs": "2.4.3",
     "cookie-parser": "1.4.6",
+    "cors": "2.8.5",
     "dayjs": "1.11.12",
     "dotenv": "16.4.5",
     "express": "4.19.2",
