--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,4 +1,5 @@
 {
+  "parser": "@typescript-eslint/parser",
   "extends": ["prettier", "@rocketseat/eslint-config/node"],
   "rules": {
     "no-useless-constructor": "off",
@@ -12,6 +13,7 @@
         "caughtErrorsIgnorePattern": "^_"
       }
     ],
+    "@typescript-eslint/no-duplicate-enum-values": "error",
     "prettier/prettier": [
       "error",
       {
